# QF_Project

./: .gitignore  README.md  main.py  pyproject.toml
PPO_RL/: backtest.py  config.py  environment.py  networks.py  ppo_agent.py  rollout_buffer.py  train.py
PPO_RL/results/: backtest_summary.csv  trade_log.csv  trained_ppo_net.pth  training_history.csv
SAC_RL/: backtest.py  config.py  data_loader.py  environment.py  main.py  networks.py  replay_buffer.py  train.py
SAC_RL/results/: backtest_summary.csv  trade_log.csv  trained_actor.pth  training_history.csv
backend/: data_loader.py  inference_engine.py  main.py
backend/data/: discovered_negative_pairs.csv  discovered_positive_pairs.csv
data/: Hourly_Close_Prices.csv  Hourly_Long_Format.csv  Indian_Stocks_10Yrs_Prices_By_Sector.xlsx
frontend/: index.html  script.js  styles.css
models/: gnn_pairs_discovery.pth
notebooks/: GNN.ipynb  GNN_Exp.ipynb  GNN_collab.ipynb  GNN_metrics_evaluation.ipynb  discovered_negative_pairs_eval.csv  discovered_positive_pairs_eval.csv  gnn_evaluation_summary.csv
