[project]
name = "qf-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.2",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "polars>=1.38.1",
    "scikit-learn>=1.8.0",
    "torch>=2.10.0",
    "torch-geometric>=2.7.0",
    "matplotlib>=3.10.0",
    "fastapi>=0.135.3",
    "uvicorn>=0.44.0",
    "seaborn>=0.13.2",
]
